added a new controller based backEnd

--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBStringConn" : "server=DESKTOP-CSKTFEA;database=QuizDB;Integrated Security=true;TrustServerCertificate=true;"
+  }
 }
