finished the but need to persist the redux and need to polish the ui

--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBStringConn" : "server=DESKTOP-F62OVDN\\MSSQLSERVER01;database=QuizDB;Integrated Security=true;TrustServerCertificate=true;"
+    "DBStringConn" : "server=DESKTOP-CSKTFEA;database=QuizDB;Integrated Security=true;TrustServerCertificate=true;"
   }
 }
